Modificando el name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libreriasoftdinjs",
+  "name": "softdin/libreriajs",
   "version": "1.0.0",
   "description": "Libreria Sofdin",
   "main": "index.js",
